--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
   "devDependencies": {
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jsdom": "^21.1.7",
@@ -100,20 +102,18 @@
     "@types/turndown": "^5.0.5",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/coverage-v8": "^1.2.1",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.27.1",
     "esbuild": "^0.24.0",
+    "happy-dom": "^16.5.3",
+    "msw": "^2.1.5",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
     "vite": "^5.4.9",
-    "vitest": "^1.2.1",
-    "@vitest/coverage-v8": "^1.2.1",
-    "msw": "^2.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.2",
-    "happy-dom": "^13.3.1"
+    "vitest": "^1.2.1"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
